Closed
Bug 110685
Opened 24 years ago
Closed 24 years ago
Assertions every time we create a new window
Categories
(Core :: DOM: Navigation, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla0.9.7
People
(Reporter: mscott, Assigned: adamlock)
References
Details
Attachments
(1 file)
|
765 bytes,
patch
|
Brade
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
With the new standard url parsing landing, I get assertions every time we bring
up a new window because mCurrentURI in the docshell is null and we call
nsStandardURL::Equals passing in this parameter as an argument. Equals asserts
if it is null.
nsStandardURL::Equals(nsIURI *unknownOther, PRBool *result)
{
NS_ENSURE_ARG_POINTER(unknownOther);
full stack trace:
nsDebug::WarnIfFalse(const char * 0x0199cd2c, const char * 0x0199cd1c, const
char * 0x0199cce8, int 1048) line 396 + 21 bytes
nsStandardURL::Equals(nsStandardURL * const 0x04622588, nsIURI * 0x00000000, int
* 0x0012fa10) line 1048 + 32 bytes
nsDocShell::OnNewURI(nsDocShell * const 0x04a35028, nsIURI * 0x04622588,
nsIChannel * 0x06606aa8, unsigned int 1) line 4731 + 31 bytes
nsDocShell::OnLoadingSite(nsDocShell * const 0x04a35028, nsIChannel *
0x06606aa8) line 4998
nsDocShell::CreateContentViewer(nsDocShell * const 0x04a35028, const char *
0x0012fbec, nsIRequest * 0x06606aa8, nsIStreamListener * * 0x0012fc3c) line 3506
nsDSURIContentListener::DoContent(nsDSURIContentListener * const 0x03695c78,
const char * 0x0012fbec, int 0, nsIRequest * 0x06606aa8, nsIStreamListener * *
0x0012fc3c, int * 0x0012fbd4) line 105 + 33 bytes
n
Comment 1•24 years ago
|
||
*** Bug 110681 has been marked as a duplicate of this bug. ***
Comment 2•24 years ago
|
||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.7
Comment 3•24 years ago
|
||
-> docshell, perhaps it is bad that mCurrentURI is NULL??
Assignee: darin → adamlock
Status: ASSIGNED → NEW
Component: Networking → Embedding: Docshell
QA Contact: benc → adamlock
Comment 4•24 years ago
|
||
Comment on attachment 58309 [details] [diff] [review]
patch, is this what you had in mind darin?
sr=darin, but i think someone should try to really find out why mCurrentURI is
NULL.
Attachment #58309 -
Flags: superreview+
Comment 5•24 years ago
|
||
this "problem" existed before my patch for bug 103916 landed... my patch only
added the assertion, which we're now seeing :)
Comment 6•24 years ago
|
||
*** Bug 110771 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 7•24 years ago
|
||
Darin, I'm not sure what you mean by the problem existing before your patch? I
guess I don't see it as a problem. mCurrentURI is null because the docshell
hasn't loaded a url yet. mCurrentURI is a variable used to keep track of the
last url we loaded. When you create a new docshell and we load the first url
into it, mCurrentURI is going to be null and that's valid.
Comment 8•24 years ago
|
||
mscott: that explains things then... i wasn't sure if that was the case or not.
so the patch attached to this bug or bug 110771 is what we should use.
Someone give me an r= (I have an sr=) and I'll checkin asap
Comment 10•24 years ago
|
||
Comment on attachment 58309 [details] [diff] [review]
patch, is this what you had in mind darin?
r=brade
Attachment #58309 -
Flags: review+
| Assignee | ||
Comment 11•24 years ago
|
||
Fix is in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•