Fix for assertions happening on every new docshell. b=110685 r=brade@netscape.com sr=darin@netscape.com